플레이어 스탯 업데이트가 안됨..